--- a/CIT LAB/BASIC Declarations and Expressions/.vscode/settings.json
+++ b/CIT LAB/BASIC Declarations and Expressions/.vscode/settings.json
@@ -2,5 +2,6 @@
     "files.associations": {
         "stdio.h": "c",
         "iostream": "cpp"
-    }
+    },
+    "github.copilot.editor.enableAutoCompletions": true
 }
